3.2/mule-studio/studio-transformers.adoc
= Studio Transformers

== Transformers Overview

A Transformer prepares a message to be processed through a Mule flow by enhancing or altering the message header or message payload. For example, if the message source that triggers your flow receives data in XML format, but a downstream message processor requires JSON-formatted data, one or more transformers positioned between the message source and the message processor can achieve the necessary translation. (Since no XML-to-JSON transformer exists, this particular example calls for a XML-to-Object transformer chained to an Object-to-JSON transformer).

Mule Studio provides a set of standard transformers to handle the most common data transformation scenarios. Typically, these pre-packaged building blocks require minimal configuration. However, if your particular use case requires special settings, you can open the Properties pane for the particular Transformer have selected, and modify the default configuration using the drop-down lists or text-entry fields.

Studio also provides a Custom Transformer, which you can use if no pre-packaged transformer meets your needs. This option requires you to code a Java class that performs the exact transformation you need. You then configure the Custom Transformer to reference this custom class.

You can string transformers together into chains so that the output of one becomes the input for the next, and so on. For example, if you need to implement an A-to-D transformation, but no such pre-packaged transformer exists, you may be able to find all the pre-packaged transformers necessary to implement the chain A-to-B, B-to-C, and C-to-D, which effectively and efficiently simulates the unavailable A-to-D transformer.

== Common Transformer Configuration Fields

Most transformers share a set of common configuration fields, although these fields may be distributed in different ways across the *General*, *Advanced*, and *Documentation* tabs of the Properties pane. The following table describes each of these common fields:

[width="100a",cols="50a,50a",options="header",]
|===
|Field |Description
|Display Name |Defaults to the generic transformer name. Change the display name, which must be alpha-numeric, to reflect the transformer's specific role, i.e. "Appends time stamp ID."
|Return Class |Specify the Java class that generates the transformer output. This value is referenced when selecting transformers automatically or checking that the transformer has returned the proper type of output.
 *Note* : To specify an array type, postfix the class name with square brackets '[]', as in 'org.mule.tck.testmodels.fruit.Orange[]'.
|Ignore Bad Input |Check this box to specify whether a transformer should pass a message it has not been able to process on to the next transformer in the transformer chain. If the box is left unchecked, the transformer will retain the result generated up to that point without passing anything to the next transformer in the chain.
|Encoding |Specify from the drop-down list the type of string encoding (such as `UTF-8` or `US ASCII`, etc.) used for output.
|Mime |Specify from the drop-down list the MIME type used for output, such as `text/plain` or `application/json`.
|Description |Enter a detailed description of this transformer for display in a yellow help balloon that pops up when you hover your mouse over the endpoint icon.
|Operation a|
Specify the type of database query the Mongo DB transformer will execute. The choices are:

* bson list to json
* DB object to map
* DB object to json
* json to DB object
* mongo collection to json

|===

== Transformers Available in Studio

The transformers provided on the Studio Palette fall into three broad categories, as detailed by the tables below:

=== Script Transformers

This type of transformer integrates a script to perform the transformation. One transformer is provided for each of the four supported scripting languages, and a fifth, generic transformer can implement a script written in any of the four languages.

[width="99a",cols="25a,25a,25a,25a",options="header"]
|===
|  |Script
 Transformer |Description |Documentation
|image:/documentation-3.2/download/attachments/52527464/groovy-transformer-24x16.png?version=2&modificationDate=1320445605824[image] |Groovy |Implements a Groovy script transformer backed by a Groovy script engine. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/javascript-transformer-24x16.png?version=1&modificationDate=1320445605839[image] |JavaScript |Implements a JavaScript transformer backed by a JavaScript script engine. |link:/documentation-3.2/display/32X/Script+Transformer+Reference[Script Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/python-transformer-24x16.png?version=1&modificationDate=1320445605821[image] |Python |Implements a script transformer backed by a Python script engine.	 |link:/documentation-3.2/display/32X/Script+Transformer+Reference[Script Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/ruby-transformer-24x16.png?version=1&modificationDate=1320445749435[image] |Ruby |Implements a script transformer backed by a Ruby script engine. |link:/documentation-3.2/display/32X/Script+Transformer+Reference[Script Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Script |Implements a script transformer backed by a JSR-223-compliant script engine, such as Groovy, JavaScript, Python, or Ruby.	 |link:/documentation-3.2/display/32X/Script+Transformer+Reference[Script Transformer Reference]
|===

=== Java Object Transformers

Each transformer in this group changes a Java object into another Java object, a Java object into some other data type (such as an HTTP request), or some non-Java data type (such as an HTTP response) into a Java object.

[width="99a",cols="25a,25a,25a,25a",options="header"]
|===
|  |Java Object
 Transformer |Description |Documentation
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Byte-Array-to-Object |Converts a byte array to an object, either by de-serializing the array or converting it to a string). |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Byte-Array-to-Serializable |Deserializes a byte array, thus converting it into an object. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Byte-Array-to-String |Converts a byte array to a string.	 |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |File-to-Byte-Array |Reads the contents of a java.io.File into a Byte array |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |File-to-String |Reads the contents of a java.io.File into a java.lang.String object. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |HTTP-Response-to-Object |Converts an HTTP response (i.e., a string, stream, or byte array payload) into a Mule message. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Java |Transforms the data from one format to another | link:/documentation-3.2/display/32X/Java+Transformer+Reference[Java Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |JmsMessage-to-Object |Converts a JMS message into an object by extracting the message payload. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Json-to-Object |Converts a Json-encoded object graph into a Java Object.	 |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-Byte-Array |Serializes all objects except for strings, which are converted using the `getBytes()` method. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-HTTP-Request |Creates a valid HTTP request from the current message and includes any HTTP headers set on the current message.	 |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-JmsMessage |Converts a Java Object into one of five types of JMS messages, depending on the object. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-JSon |Converts a Java Object to a JSON-encoded object consumable by other languages. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-String |Converts program code types into readable text strings. Used for debugging. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Object-to-XML |Converts a Java Object into XML code using XStream.	 |link:/documentation-3.2/display/32X/Object+to=XML+Transformer+Reference[Object-to-XML Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Serializable-to-Byte-Array |Converts a Java object to a byte array by serializing the object. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |String-to-Byte-Array |Converts a string into a byte array.	 |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |XML-to-Object |Uses XStream to convert XML into Java Bean graphs. |link:/documentation-3.2/display/32X/XML+to+Object+Transformer+Reference[XML-to-Object Transformer Reference]
|===

=== Content Transformers

This group of transformers modifies messages by adding to, deleting from, or converting a message payload (or a message header).

[width="99a",cols="25a,25a,25a,25a",options="header"]
|===
|  |Content
 Transformer |Description |Documentation
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Append string |Appends a string to a message payload. |link:/documentation-3.2/display/32X/Append+String+Transformer+Reference[Append String Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Body-to-Parameter-map |Converts the body of an HTTP request into a Map object. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Expression |Evaluates one or more expressions within the message, then transforms the message according to the results of its evaluation. |link:/documentation-3.2/display/32X/Expression+Transformer+Reference[Expression Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |HTTP-Response-to-String |Converts an HTTP response into a string and preserves the message header. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Message Properties |Adds, deletes, or modifies message properties.	 |link:/documentation-3.2/display/32X/Message+Properties+Transformer+Reference[Message Properties Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Message-to-HTTP-Response |Creates a valid HTTP response using the current message and its HTTP headers. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/MongoDB.png?version=1&modificationDate=1327100070139[image] |Mongo DB |An open source, high performance, schema-free, document oriented database that manages the collection of BSON documents. |All of the configuration fields for this transformer are covered in the link:#StudioTransformers-CommonTransformerConfigurationFields[MULE3STUDIO:Configuration] section of this page.
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |Transformer Ref |References a transformer that is defined as a global element. |link:/documentation-3.2/display/32X/Transformer+Reference[Transformer Reference]
|image:/documentation-3.2/download/attachments/52527464/Transformer-24x16.png?version=1&modificationDate=1320445218895[image] |XSLT |Transforms XML using XSLT. |link:/documentation-3.2/display/32X/XSLT+Transformer+Reference[XSLT Transformer Reference]
|===

For detailed information on configuring standard and custom Transformers with an XML editor, see link:/documentation-3.2/display/32X/Using+Transformers[Using Transformers].
